...
            android:layout_centerVertical="true"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/code"
            android:background="@drawable/code_background" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:text=""
...
        android:fontFamily="casual"
        android:textColor="#FFD50000"
        android:layout_centerHorizontal="true" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/check_key"
        app:borderWidth="0dp"
        android:layout_below="@+id/create_code1"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="13dp"
        android:backgroundTint="#FF2962FF"
        app:fabSize="normal"
...
