<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/join_themeetup"
        android:orderInCategory="100"
        android:title="Join The Meetup"
        app:showAsAction="never"/>
    <item
        android:id="@+id/create_meetup"
        android:orderInCategory="100"
        android:title="@string/create_meetup"
        app:showAsAction="never"/>

    <item
        android:id="@+id/signout"
        android:orderInCategory="100"
        android:title="@string/signout"
        app:showAsAction="never"/>

</menu>