...
        android:textColor="#FF757575"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:text="@string/login_page" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_email_button"
        android:layout_marginTop="0dp"
        android:layout_centerHorizontal="true"
         />

    <TextView
        android:id="@+id/login_email_button"
...
