<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:id="@+id/listViewitem_background"
    android:clickable="false"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:background="@drawable/questions">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:textSize="13sp"
        android:fontFamily="casual"
        android:textColor="#FF00B0FF"
        android:layout_marginStart="4dp"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:id="@+id/questions"
            android:textSize="20sp"
            android:fontFamily="casual"
            android:textColor="#FF424242"
            android:layout_alignStart="@+id/user_name"
            android:layout_marginTop="3dp"/>
    </RelativeLayout>
    <ToggleButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/check_like"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:id="@+id/like_button"
        android:textOff=""
        android:layout_centerVertical="true"
        android:textOn=""
        android:padding="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"/>
    <TextView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:id="@+id/number_of_likes"
        android:text=""
        android:textColor="#FF00C853"
        android:textSize="23sp"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:layout_alignEnd="@+id/like_button"
        android:textAlignment="center"/>
    <ToggleButton
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@drawable/check_highlight"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:id="@+id/highlight_button"
        android:textOff=""
        android:layout_centerVertical="true"
        android:textOn=""
        android:padding="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"/>

</RelativeLayout>